# rsfitsio

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  FMT  README.md  SYNCED_COMMIT.md  TODO.md  external_api  rust-toolchain.toml  testprog_check.sh
.github/workflows/: build.yml  coverage.yml  rust.yml
c/: PRINTF_CONVERSION  README  call_ffesum.c  cookbook.c  print_c.c  print_rs.rs  speed.c  test_fits_clean_url.c  testprog_extended.c  testprog_extended.out
licenses/: LICENSE-APACHE  LICENSE-MIT  LICENSE-RELIBC
src/: aliases.rs  buffers.rs  bzip2.rs  c_types.rs  cfileio.rs  checksum.rs  drvrfile.rs  drvrmem.rs  drvrnet.rs  drvrsmem.rs  editcol.rs  edithdu.rs  eval_defs.rs  eval_f.rs  fits_hcompress.rs  fits_hdecompress.rs  fitscore.rs  fitsio.rs  fitsio2.rs  getcol.rs  getcolb.rs  getcold.rs  getcole.rs  getcoli.rs  getcolj.rs  getcolk.rs  getcoll.rs  getcols.rs  getcolsb.rs  getcolui.rs  getcoluj.rs  getcoluk.rs  getkey.rs  group.rs  grparser.rs  histo.rs  imcompress.rs  iraffits.rs  lib.rs  modkey.rs  (+27 more)
src/helpers/: boxed.rs  mod.rs  vec_raw_parts.rs
src/relibc/: mod.rs
src/relibc/header/: errno.rs  mod.rs
src/relibc/header/stdio/: lookaheadreader.rs  mod.rs  printf.rs  scanf.rs
src/relibc/io/: buffered.rs  cursor.rs  error.rs  impls.rs  mod.rs  prelude.rs
src/relibc/platform/: mod.rs  types.rs
test_resources/: sample.txt  sample.txt.Z.BAK
