[package]
name = "rsfitsio"
version = "0.462.3"
edition = "2024"
rust-version = "1.87"
description = "Rust bindings for the CFITSIO library, providing access to FITS files."
license = "MIT OR Apache-2.0"
repository = "https://github.com/petesmc/rsfitsio"
categories = ["science", "aerospace", "external-ffi-bindings"]
keywords = [
    "fits",
    "fitsio",
    "cfitsio",
    "astronomy",
    "ffi",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]


[features]
default = []
bzip2 = ["dep:libbz2-rs-sys"]
shared_mem= []
net_services = []

[dependencies]
libz-rs-sys = { version = "0.5.1" }
libbz2-rs-sys = { version = "0.2", optional = true}
libc="0.2"
errno=">=0.3.12"
bytemuck = "1.23.1"
tempfile = "3.19"
fastrand = "2.3"
pwd = "1.4"
ricecomp = "0.4"
pliocomp = "0.2"
hcompress = "0.3"
chrono = ">=0.4.20"
cbitset = "0.2"
memchr = { version = "2.7.5", default-features = false }